--- a/skeleton_html/create_deck.html
+++ b/skeleton_html/create_deck.html
@@ -3,24 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Deck</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
-</head>
-<body>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Subjects</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
 </head>
-<body><div class="mdl-layout mdl-js-layout">
+<body>
+<div class="mdl-layout mdl-js-layout">
     <header class="mdl-layout__header">
         <div class="mdl-layout-icon"></div>
         <div class="mdl-layout__header-row">
@@ -35,7 +24,7 @@
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="#">Home</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
-            <a class="mdl-navigation__link" href="#">Settings</a>
+            <a class="mdl-navigation__link" href="#">Search</a>
         </nav>
     </div>
     <div class="mdl-grid">
@@ -128,8 +117,6 @@
 
     </main>
     </div>
-
-
 
 </body>
 </html>
