Added search bar to all headers. Cards are currently broken.

--- a/skeleton_html/sample_search_results.html
+++ b/skeleton_html/sample_search_results.html
@@ -28,6 +28,7 @@
                            id="waterfall-exp">
                 </div>
             </div>
+        </div>
 
     </header>
     <div class="mdl-layout__drawer">
@@ -54,7 +55,11 @@
                     <td class="mdl-data-table__cell--non-numeric">Biology</td>
                     <td>10</td>
                     <td>(Calculated Value)</td>
-                    <td><button class="mdl-button mdl-js-button mdl-button--primary"><i class="material-icons">visibility</i></button></td>
+                    <td>
+                        <button class="mdl-button mdl-js-button mdl-button--primary">
+                            <a href="sample_card.html"><i class="material-icons">visibility</i></a>
+                        </button>
+                    </td>
                 </tr>
                 <tr>
                     <td class="mdl-data-table__cell--non-numeric">Chemistry</td>
