--- a/skeleton_html/create_deck.html
+++ b/skeleton_html/create_deck.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Subjects</title>
+    <title>Search Results</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
@@ -13,11 +13,22 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout-icon"></div>
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout__title">My Decks</span>
+            <span class="mdl-layout__title">Results</span>
             <div class="mdl-layout-spacer"></div>
             <nav class="mdl-navigation">
             </nav>
-        </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
+                  mdl-textfield--floating-label mdl-textfield--align-right">
+                <label class="mdl-button mdl-js-button mdl-button--icon"
+                       for="waterfall-exp">
+                    <i class="material-icons">search</i>
+                </label>
+                <div class="mdl-textfield__expandable-holder">
+                    <input class="mdl-textfield__input" type="text" name="sample"
+                           id="waterfall-exp">
+                </div>
+            </div>
+
     </header>
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">(Placeholder)</span>
@@ -114,7 +125,6 @@
                 </button>
             </div>
         </div>
-
     </main>
     </div>
 
