--- a/skeleton_html/sample_card.html
+++ b/skeleton_html/sample_card.html
@@ -3,25 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Card</title>
+    <title>Search Results</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
-    <link rel="stylesheet" href="../skeleton_css/card_grid.css">
 </head>
-
 <body>
-
 <div class="mdl-layout mdl-js-layout">
-
     <header class="mdl-layout__header">
         <div class="mdl-layout-icon"></div>
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout__title">Cards</span>
+            <span class="mdl-layout__title">Results</span>
             <div class="mdl-layout-spacer"></div>
+            <nav class="mdl-navigation">
+            </nav>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
+                  mdl-textfield--floating-label mdl-textfield--align-right">
+                <label class="mdl-button mdl-js-button mdl-button--icon"
+                       for="waterfall-exp">
+                    <i class="material-icons">search</i>
+                </label>
+                <div class="mdl-textfield__expandable-holder">
+                    <input class="mdl-textfield__input" type="text" name="sample"
+                           id="waterfall-exp">
+                </div>
+            </div>
         </div>
     </header>
-
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">(USER)</span>
         <nav class="mdl-navigation">
@@ -30,6 +38,7 @@
             <a class="mdl-navigation__link" href="#">Settings</a>
         </nav>
     </div>
+
 
     <main class="mdl-layout__content">
 
@@ -180,8 +189,6 @@
                 </a>
             </div>
         </div>
-
-
     </main>
 </div>
 
