--- a/skeleton_html/returning_user.html
+++ b/skeleton_html/returning_user.html
@@ -10,28 +10,38 @@
     <link rel="stylesheet" href="../skeleton_css/card_grid.css">
 </head>
 <body>
-
 <div class="mdl-layout mdl-js-layout">
-
     <header class="mdl-layout__header">
         <div class="mdl-layout-icon"></div>
         <div class="mdl-layout__header-row">
             <span class="mdl-layout__title">Returning User</span>
             <div class="mdl-layout-spacer"></div>
+            <nav class="mdl-navigation">
+
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
+                  mdl-textfield--floating-label mdl-textfield--align-right">
+                <label class="mdl-button mdl-js-button mdl-button--icon"
+                       for="waterfall-exp">
+                    <i class="material-icons">search</i>
+                </label>
+                <div class="mdl-textfield__expandable-holder">
+                    <input class="mdl-textfield__input" type="text" name="sample"
+                           id="waterfall-exp">
+                </div>
+            </div>
+            </nav>
         </div>
     </header>
 
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">Navigation</span>
+        <span class="mdl-layout__title">(USER)</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="#">Home</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
             <a class="mdl-navigation__link" href="#">Settings</a>
         </nav>
     </div>
-    <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--4-col">Welcome Back!</div>
-    </div>
+
 
 
     <main class="mdl-layout__content">
