--- a/skeleton_html/sample_card.html
+++ b/skeleton_html/sample_card.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Results</title>
+    <title>Preview Cards in Deck</title>
+    <link rel="stylesheet" href="../skeleton_css/card_grid.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
+
 </head>
 <body>
+
 <div class="mdl-layout mdl-js-layout">
     <header class="mdl-layout__header">
         <div class="mdl-layout-icon"></div>
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout__title">Results</span>
+            <span class="mdl-layout__title">Sample Preview</span>
             <div class="mdl-layout-spacer"></div>
             <nav class="mdl-navigation">
             </nav>
@@ -30,6 +33,7 @@
             </div>
         </div>
     </header>
+
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">(USER)</span>
         <nav class="mdl-navigation">
