--- a/page09.html
+++ b/page09.html
@@ -26,11 +26,11 @@
             display: block;
             height: 100%;
             width: 100%;
-            line-height: 260px;
+            line-height: 10em;
             color: white;
             text-align: center;
             font-weight: bold;
-            font-size: 140px;
+            font-size: 4em;
             position: absolute;
             backface-visibility: hidden;
         }
