updated profile page

--- a/page10.html
+++ b/page10.html
@@ -47,17 +47,18 @@
     <div class="mdl-layout__drawer">
         <span class="mdl-layout-title">Profile</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Profile</a>
-            <a class="mdl-navigation__link" href="">My Shelf</a>
-            <a class="mdl-navigation__link" href="">Search</a>
-            <a class="mdl-navigation__link" href="">Logout</a>
+            <a class="mdl-navigation__link" href="page10.html">Profile</a>
+            <a class="mdl-navigation__link" href="skeleton_html/sample_search_results.html">My Shelf</a>
+            <a class="mdl-navigation__link" href="skeleton_html/sample_search_results.html">Search</a>
+            <a class="mdl-navigation__link" href="login.html">Logout</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
         <div id="picture"><img src="http://i.imgur.com/4oqYUbz.png"></div>
         <div id="login_info">
             <p>USERNAME</p>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Log Out</button>
+            <p>USER LOCATION</p>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='login.html';">Log Out</button>
         </div>
     </main>
 </div>
