--- a/skeleton_html/profile_settings.html
+++ b/skeleton_html/profile_settings.html
@@ -38,19 +38,31 @@
     <title>Page 10</title>
 </head>
 <body>
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<div class="mdl-layout mdl-js-layout
+            mdl-layout--fixed-header">
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Profile</span>
+            <div class="mdl-layout-spacer"></div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
+                  mdl-textfield--floating-label mdl-textfield--align-right">
+                <label class="mdl-button mdl-js-button mdl-button--icon"
+                       for="fixed-header-drawer-exp">
+                    <i class="material-icons">search</i>
+                </label>
+                <div class="mdl-textfield__expandable-holder">
+                    <input class="mdl-textfield__input" type="text" name="sample"
+                           id="fixed-header-drawer-exp">
+                </div>
+            </div>
         </div>
     </header>
+
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Profile</span>
+        <span class="mdl-layout__title">(Placeholder)</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="">Profile</a>
-            <a class="mdl-navigation__link" href="">My Shelf</a>
-            <a class="mdl-navigation__link" href="">Search</a>
-            <a class="mdl-navigation__link" href="">Logout</a>
+            <a class="mdl-navigation__link" href="returning_user.html">Home</a>
+            <a class="mdl-navigation__link" href="#">My Shelf</a>
+            <a class="mdl-navigation__link" href="profile_settings.html">Settings</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
