--- a/skeleton_html/sample_card.html
+++ b/skeleton_html/sample_card.html
@@ -11,35 +11,31 @@
 
 </head>
 <body>
-
-<div class="mdl-layout mdl-js-layout">
+<div class="mdl-layout mdl-js-layout
+            mdl-layout--fixed-header">
     <header class="mdl-layout__header">
-        <div class="mdl-layout-icon"></div>
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout__title">Sample Preview</span>
             <div class="mdl-layout-spacer"></div>
-            <nav class="mdl-navigation">
-            </nav>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
                   mdl-textfield--floating-label mdl-textfield--align-right">
                 <label class="mdl-button mdl-js-button mdl-button--icon"
-                       for="waterfall-exp">
+                       for="fixed-header-drawer-exp">
                     <i class="material-icons">search</i>
                 </label>
                 <div class="mdl-textfield__expandable-holder">
                     <input class="mdl-textfield__input" type="text" name="sample"
-                           id="waterfall-exp">
+                           id="fixed-header-drawer-exp">
                 </div>
             </div>
         </div>
     </header>
 
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">(USER)</span>
+        <span class="mdl-layout__title">(Placeholder)</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="#">Home</a>
+            <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
-            <a class="mdl-navigation__link" href="#">Settings</a>
+            <a class="mdl-navigation__link" href="profile_settings.html">Settings</a>
         </nav>
     </div>
 
