--- a/skeleton_html/sample_search_results.html
+++ b/skeleton_html/sample_search_results.html
@@ -9,35 +9,30 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
 </head>
 <body>
-<div class="mdl-layout mdl-js-layout">
+<div class="mdl-layout mdl-js-layout
+            mdl-layout--fixed-header">
     <header class="mdl-layout__header">
-        <div class="mdl-layout-icon"></div>
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout__title">Results</span>
             <div class="mdl-layout-spacer"></div>
-            <nav class="mdl-navigation">
-            </nav>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
                   mdl-textfield--floating-label mdl-textfield--align-right">
                 <label class="mdl-button mdl-js-button mdl-button--icon"
-                       for="waterfall-exp">
+                       for="fixed-header-drawer-exp">
                     <i class="material-icons">search</i>
                 </label>
                 <div class="mdl-textfield__expandable-holder">
                     <input class="mdl-textfield__input" type="text" name="sample"
-                           id="waterfall-exp">
+                           id="fixed-header-drawer-exp">
                 </div>
             </div>
         </div>
-
     </header>
-
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">(Placeholder)</span>
+        <span class="mdl-layout__title">Sample Search Results</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="#">Home</a>
+            <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
-            <a class="mdl-navigation__link" href="#">Settings</a>
+            <a class="mdl-navigation__link" href="profile_settings.html">Settings</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
@@ -49,6 +44,7 @@
                     <th>Number of Cards</th>
                     <th>Rating</th>
                     <th>Preview </th>
+                    <th>Copy</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -61,18 +57,35 @@
                             <a href="sample_card.html"><i class="material-icons">visibility</i></a>
                         </button>
                     </td>
+                    <td>
+                        <button class="mdl-button mdl-js-button mdl-button--primary">
+                            <a href="sample_card.html"><i class="material-icons">content_copy</i></a>
+                        </button>
+                    </td>
+
+
                 </tr>
                 <tr>
                     <td class="mdl-data-table__cell--non-numeric">Chemistry</td>
                     <td>10</td>
                     <td>(Calculated Value)</td>
                     <td><button class="mdl-button mdl-js-button mdl-button--primary"><i class="material-icons">visibility</i></button></td>
+                    <td>
+                        <button class="mdl-button mdl-js-button mdl-button--primary">
+                            <a href="sample_card.html"><i class="material-icons">content_copy</i></a>
+                        </button>
+                    </td>
                 </tr>
                 <tr>
                     <td class="mdl-data-table__cell--non-numeric">Math</td>
                     <td>10</td>
                     <td>(Calculated Value)</td>
                     <td><button class="mdl-button mdl-js-button mdl-button--primary"><i class="material-icons">visibility</i></button></td>
+                    <td>
+                        <button class="mdl-button mdl-js-button mdl-button--primary">
+                            <a href="sample_card.html"><i class="material-icons">content_copy</i></a>
+                        </button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
