--- a/skeleton_html/sample_card.html
+++ b/skeleton_html/sample_card.html
@@ -39,13 +39,12 @@
         </nav>
     </div>
 
-
     <main class="mdl-layout__content">
 
         <!-- Square card -->
         <div class="mdl-card mdl-shadow--2dp demo-card-square">
             <div class="mdl-card__title mdl-card--expand">
-                <h2 class="mdl-card__title-text">What is the power house of the cell?</h2>
+                <div class="mdl-card__title-text">What is the power house of the cell?</div>
             </div>
             <div class="mdl-card__supporting-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenan convallis.
