Updated navbar drawer to most current version with search page and made sure links navigate to the correct pages

--- a/skeleton_html/sample_card.html
+++ b/skeleton_html/sample_card.html
@@ -29,13 +29,14 @@
             </div>
         </div>
     </header>
-
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">(Placeholder)</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
+            <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
-            <a class="mdl-navigation__link" href="profile_settings.html">Settings</a>
+            <a class="mdl-navigation__link" href="sample_search_results.html">Search</a>
+            <a class="mdl-navigation__link" href="login.html">Logout</a>
         </nav>
     </div>
 
