--- a/skeleton_html/profile_settings.html
+++ b/skeleton_html/profile_settings.html
@@ -60,16 +60,12 @@
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">(Placeholder)</span>
         <nav class="mdl-navigation">
-<<<<<<< HEAD:skeleton_html/profile_settings.html
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
+            <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
-            <a class="mdl-navigation__link" href="profile_settings.html">Settings</a>
-=======
-            <a class="mdl-navigation__link" href="page10.html">Profile</a>
-            <a class="mdl-navigation__link" href="skeleton_html/sample_search_results.html">My Shelf</a>
-            <a class="mdl-navigation__link" href="skeleton_html/sample_search_results.html">Search</a>
+            <a class="mdl-navigation__link" href="sample_search_results.html">Search</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
->>>>>>> 3cd62c16ea30640c60560086c02c4956ffec71d1:page10.html
+
         </nav>
     </div>
     <main class="mdl-layout__content">
