--- a/skeleton_html/create_deck.html
+++ b/skeleton_html/create_deck.html
@@ -36,9 +36,8 @@
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
-            <a class="mdl-navigation__link" href="sample_search_results.html">Search</a>
+            <a class="mdl-navigation__link" href="search_page.html">Search</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
-
         </nav>
     </div>
     <div class="mdl-grid">
