--- a/skeleton_html/sample_search_results.html
+++ b/skeleton_html/sample_search_results.html
@@ -33,7 +33,7 @@
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
-            <a class="mdl-navigation__link" href="sample_search_results.html">Search</a>
+            <a class="mdl-navigation__link" href="search_page.html">Search</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
         </nav>
     </div>
