updated landing page, alt search page, plus dummy data

--- a/skeleton_html/create_deck.html
+++ b/skeleton_html/create_deck.html
@@ -13,7 +13,7 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout-icon"></div>
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout__title">Results</span>
+            <span class="mdl-layout__title">Create Flashcard Stack</span>
             <div class="mdl-layout-spacer"></div>
             <nav class="mdl-navigation">
             </nav>
@@ -31,12 +31,13 @@
 
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">(Placeholder)</span>
+        <span class="mdl-layout__title">Menu</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
             <a class="mdl-navigation__link" href="search_page.html">Search</a>
+            <a class="mdl-navigation__link" href="create_deck.html">Create Cards</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
         </nav>
     </div>
@@ -129,6 +130,6 @@
         </div>
     </main>
     </div>
-
+</div>
 </body>
 </html>
