--- a/skeleton_html/returning_user.html
+++ b/skeleton_html/returning_user.html
@@ -31,16 +31,18 @@
     </header>
 
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">(Placeholder)</span>
+        <span class="mdl-layout__title">Menu</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
             <a class="mdl-navigation__link" href="search_page.html">Search</a>
+            <a class="mdl-navigation__link" href="create_deck.html">Create Cards</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
 
         </nav>
     </div>
+    <div>Here's Your Recent Stacks</div>
     <main class="mdl-layout__content">
         <div class="mdl-grid">
             <ul class="demo-list-three mdl-list mdl-cell mdl-cell--center">
@@ -48,11 +50,13 @@
         <span class="mdl-list__item-primary-content">
           <i class="material-icons mdl-list__item-avatar">functions</i>
           <span>Math</span>
+            <span>Calc 1</span>
           <span class="mdl-list__item-text-body">
             See your decks
           </span>
         </span>
-                    <span class="mdl-list__item-secondary-content">
+
+                <span class="mdl-list__item-secondary-content">
           <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
         </span>
                 </li>
@@ -60,6 +64,7 @@
         <span class="mdl-list__item-primary-content">
           <i class="material-icons  mdl-list__item-avatar">functions</i>
           <span>Biology</span>
+            <span>Human Biology</span>
           <span class="mdl-list__item-text-body">
             See your biology decks
           </span>
@@ -68,20 +73,87 @@
           <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
         </span>
                 </li>
+                <!--<li class="mdl-list__item mdl-list__item&#45;&#45;three-line">-->
+        <!--<span class="mdl-list__item-primary-content">-->
+          <!--<i class="material-icons  mdl-list__item-avatar">functions</i>-->
+          <!--<span>History</span>-->
+          <!--<span class="mdl-list__item-text-body">-->
+           <!--See your history decks-->
+          <!--</span>-->
+        <!--</span>-->
+                    <!--<span class="mdl-list__item-secondary-content">-->
+          <!--<a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>-->
+        <!--</span>-->
+                <!--</li>-->
+            </ul>
+        </div>
+        <div>Here is Some Aggregated Content</div>
+        <div class="mdl-grid">
+            <ul class="demo-list-three mdl-list mdl-cell mdl-cell--center">
+                <li class="mdl-list__item mdl-list__item--three-line">
+        <span class="mdl-list__item-primary-content">
+          <i class="material-icons mdl-list__item-avatar">functions</i>
+          <span>Math</span>
+            <span>Calc 2</span>
+			<span>Brian</span>
+			<span>Rating 4/5</span>
+          <span class="mdl-list__item-text-body">
+            See Calc 2 deck
+          </span>
+        </span>
+
+                    <span class="mdl-list__item-secondary-content">
+          <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
+        </span>
+                </li>
                 <li class="mdl-list__item mdl-list__item--three-line">
         <span class="mdl-list__item-primary-content">
           <i class="material-icons  mdl-list__item-avatar">functions</i>
-          <span>History</span>
+          <span>Math</span>
+		  <span>Calc 3</span>
+		  <span>Chalmers</span>
+		  <span>Rating 4/5</span>
           <span class="mdl-list__item-text-body">
-           See your history decks
+            See  Calc 3 deck
           </span>
         </span>
                     <span class="mdl-list__item-secondary-content">
           <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
         </span>
                 </li>
+                <li class="mdl-list__item mdl-list__item--three-line">
+        <span class="mdl-list__item-primary-content">
+          <i class="material-icons  mdl-list__item-avatar">functions</i>
+          <span>Math</span>
+		  <span>Geometry</span>
+		  <span>Andres</span>
+		  <span>Rating 4/5</span>
+          <span class="mdl-list__item-text-body">
+           See  Geometry deck
+          </span>
+        </span>
+                    <span class="mdl-list__item-secondary-content">
+          <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
+        </span>
+                </li>
+                <li class="mdl-list__item mdl-list__item--three-line">
+        <span class="mdl-list__item-primary-content">
+          <i class="material-icons  mdl-list__item-avatar">functions</i>
+          <span>Physics</span>
+		  <span>Physics For Future Presidents</span>
+		  <span>Jinwoo</span>
+		  <span>Rating 4/5</span>
+          <span class="mdl-list__item-text-body">
+           See Physics For Future Presidents deck
+          </span>
+        </span>
+        <span class="mdl-list__item-secondary-content">
+            <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
+        </span>
+                </li>
             </ul>
         </div>
+
         <div class="mdl-grid">
             <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-cell--10-offset mdl-cell--middle" onclick="window.location='create_deck.html';">
                 <i class="material-icons">create</i>
