--- a/skeleton_html/Alt_All_Users_Tables.html
+++ b/skeleton_html/Alt_All_Users_Tables.html
@@ -28,12 +28,13 @@
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">(Placeholder)</span>
+        <span class="mdl-layout__title">Menu</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
             <a class="mdl-navigation__link" href="search_page.html">Search</a>
+            <a class="mdl-navigation__link" href="create_deck.html">Create Cards</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
         </nav>
     </div>
