updated layout, connected pages, more functionality

--- a/skeleton_html/returning_user.html
+++ b/skeleton_html/returning_user.html
@@ -14,8 +14,10 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">Welcome Back</span>
-
             <div class="mdl-layout-spacer"></div>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='create_deck.html';">
+                Create New Stack
+            </button>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
                   mdl-textfield--floating-label mdl-textfield--align-right">
                 <label class="mdl-button mdl-js-button mdl-button--icon"
@@ -29,7 +31,6 @@
             </div>
         </div>
     </header>
-
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">Menu</span>
         <nav class="mdl-navigation">
@@ -37,12 +38,11 @@
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
             <a class="mdl-navigation__link" href="search_page.html">Search</a>
-            <a class="mdl-navigation__link" href="create_deck.html">Create Cards</a>
+            <a class="mdl-navigation__link" href="create_deck.html">Create Stack</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
-
         </nav>
     </div>
-    <div>Here's Your Recent Stacks</div>
+    <div>Your Recent Stack Activity</div>
     <main class="mdl-layout__content">
         <div class="mdl-grid">
             <ul class="demo-list-three mdl-list mdl-cell mdl-cell--center">
@@ -51,13 +51,14 @@
           <i class="material-icons mdl-list__item-avatar">functions</i>
           <span>Math</span>
             <span>Calc 1</span>
+            <span># of cards</span>
+            <span>user: brian</span>
           <span class="mdl-list__item-text-body">
-            See your decks
+            See your deck
           </span>
         </span>
-
-                <span class="mdl-list__item-secondary-content">
-          <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
+        <span class="mdl-list__item-secondary-content">
+          <a class="mdl-list__item-secondary-action" href="sample_card.html"><i class="material-icons">visibility</i></a>
         </span>
                 </li>
                 <li class="mdl-list__item mdl-list__item--three-line">
@@ -65,29 +66,19 @@
           <i class="material-icons  mdl-list__item-avatar">functions</i>
           <span>Biology</span>
             <span>Human Biology</span>
+            <span># of cards</span>
+            <span>user: brian</span>
           <span class="mdl-list__item-text-body">
             See your biology decks
           </span>
         </span>
                     <span class="mdl-list__item-secondary-content">
-          <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
+          <a class="mdl-list__item-secondary-action" href="sample_card.html"><i class="material-icons">visibility</i></a>
         </span>
                 </li>
-                <!--<li class="mdl-list__item mdl-list__item&#45;&#45;three-line">-->
-        <!--<span class="mdl-list__item-primary-content">-->
-          <!--<i class="material-icons  mdl-list__item-avatar">functions</i>-->
-          <!--<span>History</span>-->
-          <!--<span class="mdl-list__item-text-body">-->
-           <!--See your history decks-->
-          <!--</span>-->
-        <!--</span>-->
-                    <!--<span class="mdl-list__item-secondary-content">-->
-          <!--<a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>-->
-        <!--</span>-->
-                <!--</li>-->
             </ul>
         </div>
-        <div>Here is Some Aggregated Content</div>
+        <div>Here is Some Aggregated Content To Get Your Attention</div>
         <div class="mdl-grid">
             <ul class="demo-list-three mdl-list mdl-cell mdl-cell--center">
                 <li class="mdl-list__item mdl-list__item--three-line">
@@ -95,13 +86,13 @@
           <i class="material-icons mdl-list__item-avatar">functions</i>
           <span>Math</span>
             <span>Calc 2</span>
-			<span>Brian</span>
+			<span>user:Brian</span>
 			<span>Rating 4/5</span>
+            <span># items</span>
           <span class="mdl-list__item-text-body">
             See Calc 2 deck
           </span>
         </span>
-
                     <span class="mdl-list__item-secondary-content">
           <a class="mdl-list__item-secondary-action" href="#"><i class="material-icons">visibility</i></a>
         </span>
@@ -111,8 +102,9 @@
           <i class="material-icons  mdl-list__item-avatar">functions</i>
           <span>Math</span>
 		  <span>Calc 3</span>
-		  <span>Chalmers</span>
+		  <span>user:Chalmers</span>
 		  <span>Rating 4/5</span>
+          <span># items</span>
           <span class="mdl-list__item-text-body">
             See  Calc 3 deck
           </span>
@@ -126,10 +118,11 @@
           <i class="material-icons  mdl-list__item-avatar">functions</i>
           <span>Math</span>
 		  <span>Geometry</span>
-		  <span>Andres</span>
+		  <span>user:Andres</span>
 		  <span>Rating 4/5</span>
+          <span>#items</span>
           <span class="mdl-list__item-text-body">
-           See  Geometry deck
+           See Geometry deck
           </span>
         </span>
                     <span class="mdl-list__item-secondary-content">
@@ -141,8 +134,9 @@
           <i class="material-icons  mdl-list__item-avatar">functions</i>
           <span>Physics</span>
 		  <span>Physics For Future Presidents</span>
-		  <span>Jinwoo</span>
+		  <span>user:Jinwoo</span>
 		  <span>Rating 4/5</span>
+          <span>#items</span>
           <span class="mdl-list__item-text-body">
            See Physics For Future Presidents deck
           </span>
@@ -153,7 +147,6 @@
                 </li>
             </ul>
         </div>
-
         <div class="mdl-grid">
             <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-cell--10-offset mdl-cell--middle" onclick="window.location='create_deck.html';">
                 <i class="material-icons">create</i>
@@ -161,6 +154,5 @@
         </div>
     </main>
 </div>
-
 </body>
 </html>
