--- a/skeleton_html/search_page.html
+++ b/skeleton_html/search_page.html
@@ -13,7 +13,11 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">Returned Search Results</span>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='create_deck.html';">
+                Create New Stack
+            </button>
         </div>
+
     </header>
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">Menu</span>
@@ -22,7 +26,7 @@
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
             <a class="mdl-navigation__link" href="search_page.html">Search</a>
-            <a class="mdl-navigation__link" href="create_deck.html">Create Cards</a>
+            <a class="mdl-navigation__link" href="create_deck.html">Create Stack</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
 
         </nav>
