--- a/skeleton_html/profile_settings.html
+++ b/skeleton_html/profile_settings.html
@@ -43,6 +43,9 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <div class="mdl-layout-spacer"></div>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='create_deck.html';">
+                Create New Stack
+            </button>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
                   mdl-textfield--floating-label mdl-textfield--align-right">
                 <label class="mdl-button mdl-js-button mdl-button--icon"
@@ -63,7 +66,7 @@
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
             <a class="mdl-navigation__link" href="#">My Shelf</a>
             <a class="mdl-navigation__link" href="search_page.html">Search</a>
-            <a class="mdl-navigation__link" href="create_deck.html">Create Cards</a>
+            <a class="mdl-navigation__link" href="create_deck.html">Create Stack</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
 
         </nav>
@@ -72,6 +75,8 @@
         <div id="picture"><img src="http://i.imgur.com/4oqYUbz.png"></div>
         <div id="login_info">
             <p>USERNAME</p>
+            <p>First Last Name</p>
+            <p>Date Joined</p>
             <p>USER LOCATION</p>
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='login.html';">Log Out</button>
         </div>
