--- a/skeleton_html/single_card_study.html
+++ b/skeleton_html/single_card_study.html
@@ -14,7 +14,6 @@
         .container {
             width: 100vw;
             height: 90vh;
-            box-shadow: 2px;
         }
         .card {
             width: 100%;
@@ -65,6 +64,18 @@
         <div class="front">Question</div>
         <div class="back">Answer</div>
     </div>
+    <div class="demo-card-wide mdl-card mdl-shadow--2dp card" onclick="flip()">
+        <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text">Welcome</h2>
+        </div>
+        <div class="mdl-card__menu">
+            Words!
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Right</button>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Wrong</button>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">Next Card</button>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='sample_card.html';">Return</button>
+        </div>
+    </div>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Right</button>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Wrong</button>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">Next Card</button>
@@ -72,3 +83,5 @@
 </section>
 </body>
 </html>
+
+
