--- a/skeleton_html/my_shelf.html
+++ b/skeleton_html/my_shelf.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Results</title>
+    <title>My Shelf</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
@@ -28,11 +28,11 @@
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">Menu</span>
+        <span class="mdl-layout__title">My Shelf</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
-            <a class="mdl-navigation__link" href="#">My Shelf</a>
+            <a class="mdl-navigation__link" href="my_shelf.html">My Shelf</a>
             <a class="mdl-navigation__link" href="search_page.html">Search</a>
             <a class="mdl-navigation__link" href="create_deck.html">Create Cards</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
@@ -40,14 +40,14 @@
     </div>
     <main class="mdl-layout__content">
         <div>
-            <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+            <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp mdl-cell mdl-cell--12-col">
                 <thead>
                 <tr>
                     <th class="mdl-data-table__cell--non-numeric">Subjects</th>
                     <th>Number of Cards</th>
                     <th>Rating</th>
-                    <th>Preview </th>
-                    <th>Copy</th>
+                    <th>View</th>
+
                 </tr>
                 </thead>
                 <tbody>
@@ -60,11 +60,6 @@
                             <a href="sample_card.html"><i class="material-icons">visibility</i></a>
                         </button>
                     </td>
-                    <td>
-                        <button class="mdl-button mdl-js-button mdl-button--primary">
-                            <a href="sample_card.html"><i class="material-icons">content_copy</i></a>
-                        </button>
-                    </td>
 
 
                 </tr>
@@ -73,22 +68,13 @@
                     <td>10</td>
                     <td>(Calculated Value)</td>
                     <td><button class="mdl-button mdl-js-button mdl-button--primary"><i class="material-icons">visibility</i></button></td>
-                    <td>
-                        <button class="mdl-button mdl-js-button mdl-button--primary">
-                            <a href="sample_card.html"><i class="material-icons">content_copy</i></a>
-                        </button>
-                    </td>
                 </tr>
                 <tr>
                     <td class="mdl-data-table__cell--non-numeric">Math</td>
                     <td>10</td>
                     <td>(Calculated Value)</td>
                     <td><button class="mdl-button mdl-js-button mdl-button--primary"><i class="material-icons">visibility</i></button></td>
-                    <td>
-                        <button class="mdl-button mdl-js-button mdl-button--primary">
-                            <a href="sample_card.html"><i class="material-icons">content_copy</i></a>
-                        </button>
-                    </td>
+
                 </tr>
                 </tbody>
             </table>
