--- a/skeleton_html/sample_card.html
+++ b/skeleton_html/sample_card.html
@@ -33,12 +33,13 @@
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">Menu</span>
+        <span class="mdl-layout__title">My Shelf</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
-            <a class="mdl-navigation__link" href="#">My Shelf</a>
+            <a class="mdl-navigation__link" href="my_shelf.html">My Shelf</a>
             <a class="mdl-navigation__link" href="search_page.html">Search</a>
+            <a class="mdl-navigation__link" href="create_deck.html">Create Cards</a>
             <a class="mdl-navigation__link" href="login.html">Logout</a>
         </nav>
     </div>
