Ammended drawer titles to be accirate

--- a/skeleton_html/create_deck.html
+++ b/skeleton_html/create_deck.html
@@ -31,7 +31,7 @@
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">Menu</span>
         <div class="mdl-layout__drawer">
-            <span class="mdl-layout__title">My Shelf</span>
+            <span class="mdl-layout__title">Create Deck</span>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link" href="returning_user.html">Home</a>
                 <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
