--- a/skeleton_html/profile_settings.html
+++ b/skeleton_html/profile_settings.html
@@ -60,7 +60,7 @@
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">My Shelf</span>
+        <span class="mdl-layout__title">Profile Settings</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
