--- a/skeleton_html/search_page.html
+++ b/skeleton_html/search_page.html
@@ -20,7 +20,7 @@
 
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">Menu</span>
+        <span class="mdl-layout__title">Search Page</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
