--- a/skeleton_html/sample_card.html
+++ b/skeleton_html/sample_card.html
@@ -33,7 +33,7 @@
         </div>
     </header>
     <div class="mdl-layout__drawer">
-        <span class="mdl-layout__title">My Shelf</span>
+        <span class="mdl-layout__title">Card Overview</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="returning_user.html">Home</a>
             <a class="mdl-navigation__link" href="profile_settings.html">Profile</a>
