--- a/skeleton_html/page09.html
+++ b/skeleton_html/page09.html
@@ -16,14 +16,14 @@
             height: 90vh;
             box-shadow: 2px;
         }
-        .card {
+        .mdl-card {
             width: 100%;
             height: 100%;
-            transition: transform 3s;
+            transition: transform 5s;
             transform-style: preserve-3d;
             -webkit-transform-origin: 50% 50%;
         }
-        .card div {
+        .mdl-card div {
             display: block;
             height: 100%;
             width: 100%;
@@ -35,40 +35,51 @@
             position: absolute;
             backface-visibility: hidden;
         }
-        .card .front {
+        .mdl-card__title.front {
             background: lightskyblue;
         }
-        .card .back {
+        .mdl-card__title.back {
             background: lightskyblue;
             transform: rotateY( 180deg );
         }
-        .card.flipped {
+        .mdl-card.flipped {
             transform: rotateY( 180deg );
         }
         @media screen and (orientation: landscape) {
-            .card div {
+            .mdl-card div {
                 line-height: 500%;
             }
         }
     </style>
     <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
     <script>
+//        let cardClass = document.getElementsByClassName('mdl-card');
+//        let flashCardFlip = Array.from(cardClass).forEach( (card)=> {
+//            card.addEventListener('click',flip);
+//        });
+        document.getElementById('front').addEventListener('click',flip);
         function flip() {
-            $('.card').toggleClass('flipped');
+            console.log("I'm a flash card!");
+//            document.getElementsByClassName('mdl-card').classList.toggle('flipped');
+//            $('.mdl-card').toggleClass('flipped');
         }
     </script>
 
 </head>
 <body>
-<section class="container">
-    <div class="card" onclick="flip()">
-        <div class="front">Question</div>
-        <div class="back">Answer</div>
+<section class="mdl-card">
+        <div class="mdl-card__title" id="front">
+            <h2 class="mdl-card__title-text">Question</h2>
+        </div>
+        <div class="mdl-card__title back" onclick="flip()">
+            <h2 class="mdl-card__title-text">Answer</h2>
+        </div>
     </div>
+</section>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Right</button>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Wrong</button>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">Next Card</button>
     <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="window.location='sample_card.html';">Return</button>
-</section>
+
 </body>
 </html>
